# bunos

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  build_disk_image.sh  compile_commands_host.sh  compile_commands_target.sh  copy_libc_headers.sh  cross.cmake  grub.cfg  lint.sh  shell.nix
bustd/: CMakeLists.txt  algorithm.hpp  assert.hpp  bitfield.hpp  function.hpp  iteration.hpp  list.hpp  macros.hpp  math.hpp  memory.cpp  memory.hpp  new.hpp  optional.hpp  ownedptr.hpp  rc.hpp  ringbuffer.hpp  scopeguard.hpp  stddef.hpp  string_view.cpp  string_view.hpp  stringview.cpp  stringview.hpp  type_traits.hpp  vector.hpp
bustd/test/: CMakeLists.txt  algorithm.cpp  bitfield.cpp  list.cpp  optional.cpp  ownedptr.cpp  rc.cpp  ringbuffer.cpp  scopeguard.cpp  stringview.cpp  vector.cpp
coreutils/: CMakeLists.txt  test_app.cpp  yes.cpp
kernel/: CMakeLists.txt  cxxabi.cpp  debugsymbols.cpp  debugsymbols.hpp  elfreader.cpp  elfreader.hpp  exec_elf.h  interruptguard.cpp  interruptguard.hpp  interruptmanager.cpp  interruptmanager.hpp  interrupts.cpp  interrupts.hpp  kernel_main.cpp  kmalloc.cpp  kmalloc.hpp  kprint.cpp  kprint.hpp  memory.hpp  panic.cpp  panic.hpp  physicalmalloc.cpp  physicalmalloc.hpp  process.cpp  process.hpp  sched.cpp  sched.hpp  scheduler.cpp  scheduler.hpp  spinlock.cpp  spinlock.hpp  syscall.cpp  syscall.hpp  syscalls.cpp  syscalls.hpp  test_kmalloc.cpp  test_kmalloc.hpp  timer.cpp  timer.hpp  to_string.cpp  (+2 more)
kernel/filesystem/: directoryentry.hpp  ext2.cpp  ext2.hpp  ext2_structs.hpp  ifilesystem.hpp  inode.hpp  inodeindex.cpp  inodeindex.hpp  vfs.cpp  vfs.hpp
kernel/process/: keyboardfile.cpp  keyboardfile.hpp
kernel/task/: arch.hpp  x86.cpp  x86.hpp  x86.s
kernel/tty/: ittydevice.hpp  kerneloutputdevice.cpp  kerneloutputdevice.hpp
kernel/tty/i386/: vga.cpp  vga.hpp
kernel/x86/: backtrace.hpp  boot.S  boot.s  crti.s  crtn.s  gdt.cpp  gdt.hpp  gdt.s  handlers.inc  interruptmanager.cpp  interruptmanager.hpp  interrupts.S  interrupts.cpp  interrupts.hpp  io.cpp  io.hpp  io.s  linker.ld  memory.cpp  memory.hpp  memory.s  pagemapguard.cpp  pagemapguard.hpp  paging.cpp  paging.hpp  pata.cpp  pata.hpp  physicalmalloc.cpp  physicalmalloc.hpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp  ps2.cpp  ps2.hpp  ps2_keyboard.cpp  ps2_keyboard.hpp  ps2_keyboard_scancodes.hpp  scheduler.s  syscalls.cpp  (+2 more)
kernel/x86/tty/: serial.cpp  serial.hpp  vga.cpp  vga.hpp
libc/: .clang-tidy  CMakeLists.txt  ctype.cpp  ctype.h  errno.cpp  errno.h  fcntl.cpp  fcntl.h  fnctl.cpp  stdint.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  unistd.cpp  unistd.h
libc/sys/: syscall.h  types.h
libc/x86/: crt0.s  syscall.S  syscall.s
libraries/: CMakeLists.txt
libraries/libm/: CMakeLists.txt  math.cpp
libraries/libstacktrace/: CMakeLists.txt  stacktrace.cpp  stacktrace.hpp  stackwalker.cpp  stackwalker.hpp
libraries/libstdc++/: CMakeLists.txt  blank.cpp
libraries/libtest/: libtest.cpp  libtest.hpp
libraries/libubsan/: CMakeLists.txt  abi.hpp  abort.cpp  abort.hpp  type_mismatch.cpp  ubsan.cpp
toolchain/: binutils.patch  build.sh  gcc.patch
